# gnucap

./: .gitignore  BUGS  CHANGES.uf  ChangeLog  INSTALL  Makefile.am  NEWS  README  TODO  bootstrap  configure.ac  gnucap-conf.in  gnuplot.mk
apps/: Makefile.am  bm_exp.cc  bm_fit.cc  bm_generator.cc  bm_poly.cc  bm_pulse.cc  bm_pwl.cc  bm_tanh.cc  bmm_semi.cc  c_comand.cc  c_exp.cc  c_for.cc  c_list.cc  c_measure.cc  c_modify.cc  c_prbcmd.cc  c_sim.cc  c_sweep.cc  c_system.cc  d_ccvs.cc  d_coil.cc  d_cs.cc  d_diode.model  d_meas.cc  d_meter.cc  d_mos_base.model  d_poly_g.cc  d_res.cc  d_switch.cc  d_trln.cc  d_ttcap.cc  d_vcg.cc  d_vcr.cc  d_vcvs.cc  d_vs.cc  func_core.cc  lang_spectre.cc  lang_spice.cc  lang_verilog.cc  measure_at.cc  (+17 more)
doc/: Makefile.am
examples/: Makefile.am  README  alter_cont.gc  d_bjt-diffpair-tr2.gc  ddc_ex2.gc  ddc_inverter.gc  ddc_rc1.gc  ddc_v.gc  ddc_vf.gc  poly.gc  tdo.gc  vektorfeldtest.gp
include/: Makefile.am  ap.h  bm.h  c_comand.h  d_cap.h  d_coment.h  d_dot.h  d_subckt.h  e_adp.h  e_aux.h  e_base.h  e_card.h  e_cardlist.h  e_ccsrc.h  e_compon.h  e_node.h  e_paramlist.h  e_storag.h  e_subckt.h  globals.h  io_.h  io_error.h  io_trace.h  l_denoise.h  l_dispatcher.h  l_istring.h  l_lib.h  l_stlextra.h  m_base.h  m_expression.h  m_matrix.h  m_matrix_extra.h  m_phase.h  m_wave.h  md.h  mode.h  patchlev.h  patchlev.h.in  s_ddc.h  s_tr.h  (+12 more)
lib/: Makefile.am  ap_construct.cc  ap_convert.cc  ap_error.cc  ap_get.cc  ap_match.cc  bm.cc  bm_value.cc  c__cmd.cc  c_attach.cc  c_file.cc  d_logic.cc  d_logicmod.cc  d_subckt.cc  e_adp.cc  e_base.cc  e_card.cc  e_cardlist.cc  e_ccsrc.cc  e_compon.cc  e_elemnt.cc  e_model.cc  e_node.cc  e_storag.cc  globals.cc  io.cc  io_contr.cc  io_error.cc  io_findf.cc  io_out.cc  io_xopen.cc  l_ftos.cc  l_pmatch.cc  l_trim.cc  l_wmatch.cc  m_base_math.cc  m_expression_dump.cc  m_expression_in.cc  m_expression_reduce.cc  m_fft.cc  (+15 more)
main/: Makefile.am  config.h.in  gnucap-conf.in  gnucap.in  main.cc  startup.cc  startup.h
modelgen/: Makefile.am  mg_.h  mg_error.cc  mg_main.cc  mg_out_common.cc  mg_out_dev.cc  mg_out_h.cc  mg_out_model.cc  mg_out_root.cc
modules/: Makefile.am  c_debug.cc  c_nodeset.cc  c_wave.cc  d_bjt.cc  d_bjt.h  d_branchvs.cc  d_brl.cc  d_bti.cc  d_bti.h  d_bti_inf.cc  d_diode.cc  d_diode.h  d_gpolyk_wrap.cc  d_hci.cc  d_mos.cc  d_mos.h  d_mos1.cc  d_mos1.h  d_mos123.cc  d_mos123.h  d_mos8.cc  d_mos8.h  d_mos_base.cc  d_mos_base.h  d_rcd.cc  d_rcd.h  d_rcd_exp.cc  d_rcd_sym.cc  d_rcd_sym.h  d_rcd_sym_v2.cc  d_rcd_sym_v2.h  d_rcd_sym_v3.cc  d_rcd_sym_v4.cc  d_ttint.cc  e_adp_mos.cc  e_adp_mos.h  s_ddc.cc  s_ev.cc  s_ev.h  (+6 more)
plugins/: Makefile.am
src/: Makefile.am  ap.h  ap_construct.cc  ap_convert.cc  ap_get.cc  ap_match.cc  ap_skip.cc  bm.h  bm_complex.cc  bm_cond.cc  bm_exp.cc  bm_fit.cc  bm_model.cc  bm_poly.cc  bm_posy.cc  bm_pulse.cc  bm_pwl.cc  bm_sffm.cc  bm_sin.cc  bm_tanh.cc  bmm_semi.cc  bmm_table.cc  c__cmd.cc  c_attach.cc  c_clear.cc  c_comand.cc  c_debug.cc  c_delete.cc  c_expect.cc  c_file.cc  c_for.cc  c_genrat.cc  c_list.cc  c_measure.cc  c_nodeset.cc  c_param.cc  c_prbcmd.cc  c_printf.cc  c_save.cc  c_status.cc  (+138 more)
tests/: LogicAND.gc  LogicAND.ref  Makefile.am  README  Xnodeorder.gc  Xnodeorder.ref  Xprobes.gc  Xprobes.ref  ac_lp.gc  ac_lp.ref  ac_noise.gc  ac_noise.ref  alter.gc  alter.ref  bm_cond.1.ckt  bm_cond.3.ckt  bm_cond.3.ckt.ref  bm_exp.1.ckt  bm_exp.1p.ckt  bm_exp.2.ckt  bm_exp.3.ckt  bm_exp.3.ckt.ref  bm_exp.3p.ckt.ref  bm_exp.4p.ckt.out  bm_exp.4p.ckt.ref  bm_exp.5p.ckt.ref  bm_poly.0.ckt  bm_poly.0.ckt.ref  bm_poly.1.ckt.ref  bm_poly.2.ckt.ref  bm_pulse.1.ckt  bm_pulse.1.ckt.out  bm_pulse.1.ckt.ref  bm_pulse.10.gc  bm_pulse.10.ref  bm_pulse.11.gc  bm_pulse.11.ref  bm_pulse.1a.ckt  bm_pulse.1b.ckt  bm_pulse.2.ckt  (+768 more)
