## Process this file with automake to produce Makefile.in
GNUCAP=gnucap

pkgexamplesdir=	${docdir}/examples
dist_pkgexamples_DATA= ${EXFILES}

EXFILES=\
alter_cont.gc \
branchvs.gc \
crcr.sim \
crc.sim \
d_bjt-diffpair-tr2.gc \
ddc_ex2.gc \
ddc_inverter.gc \
ddc_rc1.gc \
ddc_vf.gc \
ddc_v.gc \
ddc_vrc.gc \
eq5-.tran.ckt \
eq5-.tran.euler.fast.ckt \
eq5-.tran.fast.ckt \
eq5-.tran.slow.ckt \
eq5-.tran.vfast.ckt \
eq5-.tran.vvfast.ckt \
eq5-.tran.vvvfast.ckt \
eq6-.tran.vvvfast.ckt \
eq7-.tran.default.ckt \
eq7-.tran.nobypass.ckt \
eq7-.tran.nofbbypass.ckt \
eq7-.tran.noincmode.ckt \
eq7-.tran.nolcbypass.ckt \
eq7-.tran.nolubypass.ckt \
eq7-.tran.notraceload.ckt \
eq7-.tran.slow.ckt \
eq7-.tran.spice-accurate.ckt \
eq7-.tran.vvvfast.ckt \
hic0_bench.sim \
hic0_bug.gc \
hic0_ok.gc \
hic3.gc \
ivl_invert.gc \
lp_vf.sim \
mstat.ckt \
mstat_comp.gc \
mstat_forward.gc \
mstat_tree.gc \
nmos.doc \
nmosgen.c \
nmpgen.c \
nodeset.gc \
opamp.doc \
opamp.gc \
ota_medium.gc \
parameter_sweep.sim \
poly.gc \
README \
tdo.gc \
twprobes.sim \
tw_store.gc \
uic_cap.gc \
VCbug.sim \
vektorfeldtest.gp \
vr2cr.sim \
vrcr.gc
